# analytic-agent

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  env.example  nginx.conf  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: __init__.py  reporter_agent.py  researcher_agent.py
app/api/: __init__.py  analysis.py
app/models/: analysis_task.py
app/schemas/: user.py
app/services/: analysis_service.py
backend/: .env.example  Makefile
backend/app/agents/: data_analyst_agent.py
backend/app/api/: chat.py  users.py
backend/app/schemas/: __init__.py  analysis.py
backend/app/services/: user_service.py
backend/app/utils/: file_utils.py
frontend/: docker-compose.yml  env.example
frontend/mongo-init/: init.js
genbi-core/: main.py  pyproject.toml
genbi-core/demo/: __init__.py  mcp_demo.py
genbi-core/tool/: base_tool.py  tool_registry.py
genbi-service/: README.md  pyproject.toml
genbi-service/alembic/: env.py
genbi-service/app/: __init__.py  database.py  main.py
genbi-service/app/agents/: crew_manager.py
genbi-service/app/api/: __init__.py  health.py  tools.py
genbi-service/app/models/: __init__.py  user.py
genbi-service/app/services/: __init__.py
genbi-service/app/tools/: __init__.py  data_analysis_tools.py  mcp_tools.py
genbi-service/app/utils/: __init__.py  security.py
genbi-service/tests/: test_analysis.py
genbi-ui/: README.md  docker-compose.yml  env.example
scripts/: init_db.py  setup_dev.py
tests/: __init__.py  conftest.py
